♻️ Update Service Worker compiling and caching strategies (#174)
* Add globbing patterns for manifest injection

* Fix PR Title Checker 'site' option

* Remove images that are now served from 3P

* Optimize PWA icons

* Update Service Worker caching strategies

Move landing pages to Network First, move from precaching to warming for most items, move assets to cache first because they've got hashes in them now

Resolves #159

* Update code blocks to include titles and clases

Resolves #162

* Clean up typography style guide

* Bring in updated Chrome OS Markdown

Resolves #161

* Update Vite 11ty version

* Add Android recap post

Was added after fork, this copies/pastes it in to get it working. All other content should still be here

* Add Navigation Preload to SW

Also precaches components for when SWI eventually is re-introduced

* Migrate to manual Service Worker registration

* Fix Broadcast Update for long-cached pages

Needed to move listener before DCL, only want it on ETag changes

* Add staging build option

* Remove navigation preload

See #177 for details why

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "test:lint": "eslint tests",
     "test": "nyc ava",
     "vite:build": "vite build",
+    "vite:staging": "vite build --mode staging",
     "vite:watch": "vite",
     "vite": "vite",
     "vrt:approve": "node vrt.js approve",
@@ -74,7 +75,7 @@
     "ava": "^3.15",
     "backstopjs": "^5.4",
     "breakpoint-sass": "^2.7.1",
-    "chromeos-dev-markdown": "^1.0.0",
+    "chromeos-dev-markdown": "^1.0.1",
     "commitizen": "^4.2",
     "config": "^3.3",
     "cross-env": "^7.0",
@@ -128,7 +129,7 @@
     "unist-util-parents": "^1.0",
     "unist-util-visit": "^2.0",
     "vite": "^2.7.10",
-    "vite-plugin-eleventy": "0.2.0",
+    "vite-plugin-eleventy": "0.3.1",
     "vite-plugin-posthtml": "0.0.3",
     "yaml-unist-parser": "^1.3"
   },
@@ -144,13 +145,15 @@
     "service-worker-i18n-redirect": "^1.0.0",
     "service-worker-includes": "^1.0.1",
     "vite-plugin-pwa": "^0.11.11",
-    "workbox-broadcast-update": "^5.1",
-    "workbox-cacheable-response": "^5.1",
-    "workbox-expiration": "^5.1",
-    "workbox-google-analytics": "^5.1",
-    "workbox-precaching": "^5.1",
-    "workbox-routing": "^5.1",
-    "workbox-strategies": "^5.1"
+    "workbox-broadcast-update": "^6.4.2",
+    "workbox-cacheable-response": "^6.4",
+    "workbox-expiration": "^6.4",
+    "workbox-google-analytics": "^6.4",
+    "workbox-navigation-preload": "^6.4.2",
+    "workbox-precaching": "^6.4",
+    "workbox-recipes": "^6.4",
+    "workbox-routing": "^6.4",
+    "workbox-strategies": "^6.4"
   },
   "private": true,
   "volta": {
