♻(build) Move prod deploy to main branch

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -127,7 +127,7 @@ jobs:
   deploy:
     needs: build-test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/trunk'
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
