validation cards layout

--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -24,6 +24,28 @@ results:
     value: 103%
     icon: trending-up
   footnote: 1
+validation:
+  title: Grow in good company.
+  modifiers:
+    custom: item-grid--validation
+    variant: validation
+    subtitle: Keep your app—and your audience—growing, across the Chrome OS community.
+  items:
+    - description: +103%
+      details: App Usage Growth YoY on Chrome OS for Android, Web, and Games
+      modifiers:
+        shape: semicircle
+        color: yellow
+    - description: +92%
+      details: Chrome OS YoY Growth
+      modifiers:
+        shape: circle
+        color: blue
+    - description: +124%
+      details: Growth of User Engagment YoY with apps on Chrome OS
+      modifiers:
+        shape: triangle
+        color: green
 onAndWith:
   desc: Build for Chrome OS, build on Chrome OS
   cards:
