Update Functions dependencies
Remove unused dependencies, move scripts to top level package.json

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "ava": "ava",
     "build": "cross-env NODE_ENV=production run-p *:build",
     "dev": "run-p *:watch",
-    "firebase:watch": "firebase serve --only functions --port=5010",
     "firebase": "firebase",
+    "firebase:watch": "firebase serve --only functions --port=5010",
+    "firebase:functions:shell": "firebase functions:shell",
+    "firebase:functions:log": "firebase functions:log",
     "js:lint": "eslint functions site lib vite.config.js ava.config.cjs",
     "lint": "cross-env NODE_ENV=production run-p *:lint",
     "md:lint": "remark 'site/*/!(style-guide)/**/*.md' -q -f",
