Ingnore smever major upgrades to Remark Lint
Major updates here all move to ES Modules, which requires an entire refactoring of our Markdown linting without gaining any new or useful features, and seemingly without resolving any critical issues, so not worth the effort right now

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,16 @@ updates:
       interval: weekly
     commit-message:
       prefix: '📌 '
+    ignore:
+      - dependency-name: remark-lint*
+        update-types:
+          - version-update:semver-major
+      - dependency-name: unified-lint-rule
+        update-types:
+          - version-update:semver-major
+      - dependency-name: unist-*
+        update-types:
+          - version-update:semver-major
   - package-ecosystem: npm
     directory: /functions
     schedule:
