--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "lodash.clonedeep": "^4.5",
     "lodash.get": "^4.4",
     "lodash.kebabcase": "^4.1",
+    "markdown-it": "^12.3.2",
     "node-fetch": "^2.6",
     "npm-run-all": "^4.1",
     "nyc": "^15.1",
