📌 Omnibus dependency update (#241)
* Only run Dependabot once a week

* Update Functions dependencies

Remove unused dependencies, move scripts to top level package.json

* Bump eslint-config-prettier to 8.3

* Ingnore smever major upgrades to Remark Lint

Major updates here all move to ES Modules, which requires an entire refactoring of our Markdown linting without gaining any new or useful features, and seemingly without resolving any critical issues, so not worth the effort right now

* Remove unused dependencies

* Update backstop and NYC versions

* Add Markdown-It as dev dependency

Required for testing

* Update package lock

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "ava": "ava",
     "build": "cross-env NODE_ENV=production run-p *:build",
     "dev": "run-p *:watch",
-    "firebase:watch": "firebase serve --only functions --port=5010",
     "firebase": "firebase",
+    "firebase:watch": "firebase serve --only functions --port=5010",
+    "firebase:functions:shell": "firebase functions:shell",
+    "firebase:functions:log": "firebase functions:log",
     "js:lint": "eslint functions site lib vite.config.js ava.config.cjs",
     "lint": "cross-env NODE_ENV=production run-p *:lint",
     "md:lint": "remark 'site/*/!(style-guide)/**/*.md' -q -f",
@@ -69,17 +71,14 @@
     "all": true
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.12",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
-    "@commitlint/cli": "^15.0",
     "ajv": "^6.12",
     "ajv-merge-patch": "^4.1",
     "autoprefixer": "^10.4.2",
     "ava": "^3.15",
-    "backstopjs": "^5.4",
+    "backstopjs": "^6.0",
     "breakpoint-sass": "^2.7.1",
     "chromeos-dev-markdown": "^1.0.1",
-    "commitizen": "^4.2",
     "config": "^3.3",
     "cross-env": "^7.0",
     "del-cli": "^4.0",
@@ -90,14 +89,14 @@
     "eslint": "^8.4",
     "eslint-config-developit": "^1.2",
     "eslint-config-google": "^0.14",
-    "eslint-config-prettier": "^6.15",
+    "eslint-config-prettier": "^8.3",
     "eslint-plugin-ava": "^8.0",
     "eslint-plugin-import": "^2.25",
     "eslint-plugin-prettier": "^3.4",
     "eslint-plugin-spellcheck": "^0.0",
     "esm": "^3.2",
     "express": "^4.17",
-    "firebase-tools": "^9.23.1",
+    "firebase-tools": "^10.1.5",
     "front-matter": "^4.0",
     "fs-extra": "^8.1",
     "fuse.js": "^3.4",
@@ -109,9 +108,10 @@
     "lodash.clonedeep": "^4.5",
     "lodash.get": "^4.4",
     "lodash.kebabcase": "^4.1",
+    "markdown-it": "^12.3.2",
     "node-fetch": "^2.6",
     "npm-run-all": "^4.1",
-    "nyc": "^14.1",
+    "nyc": "^15.1",
     "patch-package": "^6.4",
     "posthtml-external-link": "^0.1",
     "posthtml-match-helper": "^1.0",
@@ -119,8 +119,8 @@
     "remark": "^14.0",
     "remark-cli": "^8.0",
     "remark-frontmatter": "^2.0",
-    "remark-lint": "^7.0",
-    "remark-lint-prohibited-strings": "^1.5",
+    "remark-lint": "^7.0.1",
+    "remark-lint-prohibited-strings": "^1.5.2",
     "replaceall": "^0.1",
     "sanitize-html": "^2.6.1",
     "sass": "^1.43",
@@ -131,9 +131,9 @@
     "stylelint-config-recommended": "^6.0.0",
     "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-standard": "^24.0.0",
-    "unified-lint-rule": "^1.0",
+    "unified-lint-rule": "^1.0.6",
     "unist-util-find": "^1.0",
-    "unist-util-parents": "^1.0",
+    "unist-util-parents": "^1.0.3",
     "unist-util-visit": "^2.0",
     "vite": "^2.7.10",
     "vite-plugin-eleventy": "0.3.1",
