--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,19 @@ updates:
   - package-ecosystem: npm
     directory: /
     schedule:
-      interval: daily
+      interval: weekly
     commit-message:
       prefix: '📌 '
+    ignore:
+      - dependency-name: remark-lint*
+        update-types:
+          - version-update:semver-major
+      - dependency-name: unified-lint-rule
+        update-types:
+          - version-update:semver-major
+      - dependency-name: unist-*
+        update-types:
+          - version-update:semver-major
   - package-ecosystem: npm
     directory: /functions
     schedule:
