case studies, study card layout

--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -55,6 +55,12 @@ onAndWith:
         text: See design resources
       modifiers:
         offset: true
+caseStudies:
+  title: Get inspired
+  subtitle: Explore how brands are unlocking more possibilities with Chrome OS.
+  cta:
+    text: All Case Studies
+    url: /en/news
 posts:
   title: The latest on Chrome OS
   modifiers:
