Run Prettier for CJS and MJS files

--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "postinstall": "patch-package",
     "prebuild": "del public",
     "pretest": "run-s lint",
-    "prettier:lint": "prettier -c './**/*.{html,md,js,json,scss}'",
-    "prettier": "prettier --write './**/*.{html,md,js,json,scss}'",
+    "prettier:lint": "prettier -c './**/*.{html,md,js,cjs,mjs,json,scss}'",
+    "prettier": "prettier --write './**/*.{html,md,js,cjs,mjs,json,scss}'",
     "start": "run-s dev",
     "test:lint": "eslint tests",
     "test": "nyc ava",
