--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -69,10 +69,12 @@ subnav:
     variant: subnav
 chromebook:
   image:
-    src: ix://home/chromebooks-device.1500.png
-    alt: An image displaying three Chromebooks. One Samsung Chromebook is folded down. Another Acer Chromebook is folded back as a tablet. The last is open for standard laptop use.
+    # TODO: update with additional asset batch
+    # src: ix://devices/GCH_SamsungPlusV2_still_v011_computerRearPartOpenWithShadow_cropped.png
+    alt: An image of a partially opened Samsung Chromebook next to a stylus.
   content:
-    title: Get to know Chromebook
+    eyebrow: M100 Launch
+    title: New Features
     copy: Coming in all shapes and sizes, Chromebooks are speedy, simple, secure, and run Chrome OS.
   cta:
     url: https://www.google.com/chromebook/
