Update Prettier scripts
Now linting NJK as HTML, and running the various tasks as one

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
   "printWidth": 10000,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "overrides": [
+    {
+      "files": ["*.njk"],
+      "options": {
+        "parser": "html"
+      }
+    }
+  ]
 }
