--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "postinstall": "patch-package",
     "prebuild": "del public",
     "pretest": "run-s lint",
-    "prettier:lint": "prettier -c './**/*.{html,md,js,cjs,mjs,json,scss}'",
-    "prettier": "prettier --write './**/*.{html,md,js,cjs,mjs,json,scss}'",
-    "start": "run-s dev",
+    "prettier:files:fix": "prettier --write .",
+    "prettier:files:lint": "prettier -c .",
+    "prettier:fix": "run-p prettier:*:fix",
+    "prettier:lint": "run-p prettier:*:lint",
+    "prettier:njk:fix": "prettier --write '**/*.njk'",
+    "prettier:njk:lint": "prettier -c '**/*.njk'",
     "test:lint": "eslint tests",
     "test": "nyc ava",
     "vite:build": "vite build",
