Only stylelint provided files

--- a/package.json
+++ b/package.json
@@ -179,7 +179,7 @@
     "ava.config.cjs": "eslint --cache",
     "site/*/!(style-guide)/**/*.md": "remark -q -f",
     "**/*": "prettier -c",
-    "site/sass/**/*scss": "stylelint 'site/sass/**/*.scss'",
+    "site/sass/**/*scss": "stylelint",
     "tests/**/*.js": "eslint -c tests/.eslintrc.yml --cache"
   }
 }
