♻️(build) Clean up NPM scripts (#266)
* 👕 Clean up Nunjucks files now that they're linted properly

New linting script forces NJK files to be linted prettier linted like HTML

* Update Prettier scripts

Now linting NJK as HTML, and running the various tasks as one

* Order scripts by name

* Improve prettier staged lint glob

* Only stylelint provided files

--- a/package.json
+++ b/package.json
@@ -34,21 +34,31 @@
   "scripts": {
     "ava": "ava",
     "build": "cross-env NODE_ENV=production run-p *:build",
+    "css:fix": "stylelint --fix 'site/sass/**/*.scss'",
+    "css:lint": "stylelint 'site/sass/**/*.scss'",
     "dev": "run-p *:watch",
-    "firebase": "firebase",
-    "firebase:watch": "firebase serve --only functions --port=5010",
-    "firebase:functions:shell": "firebase functions:shell",
     "firebase:functions:log": "firebase functions:log",
+    "firebase:functions:shell": "firebase functions:shell",
+    "firebase:watch": "firebase serve --only functions --port=5010",
+    "firebase": "firebase",
+    "fix": "cross-env NODE_ENV=production run-p *:fix",
+    "js:fix": "eslint --fix functions site lib vite.config.js ava.config.cjs",
     "js:lint": "eslint functions site lib vite.config.js ava.config.cjs",
     "lint": "cross-env NODE_ENV=production run-p *:lint",
     "md:lint": "remark 'site/*/!(style-guide)/**/*.md' -q -f",
     "patch": "patch-package",
     "postinstall": "patch-package",
     "prebuild": "del public",
+    "prepare": "husky install",
     "pretest": "run-s lint",
-    "prettier:lint": "prettier -c './**/*.{html,md,js,cjs,mjs,json,scss}'",
-    "prettier": "prettier --write './**/*.{html,md,js,cjs,mjs,json,scss}'",
-    "start": "run-s dev",
+    "prettier:files:fix": "prettier --write .",
+    "prettier:files:lint": "prettier -c .",
+    "prettier:fix": "run-p prettier:*:fix",
+    "prettier:lint": "run-p prettier:*:lint",
+    "prettier:njk:fix": "prettier --write '**/*.njk'",
+    "prettier:njk:lint": "prettier -c '**/*.njk'",
+    "serve": "run-s dev",
+    "start": "vite",
     "test:lint": "eslint tests",
     "test": "nyc ava",
     "vite:build": "vite build",
@@ -58,10 +68,7 @@
     "vrt:approve": "node vrt.js approve",
     "vrt:reference": "node vrt.js reference",
     "vrt:serve": "serve -l 5566 .backstop",
-    "vrt": "node vrt.js test",
-    "prepare": "husky install",
-    "css:lint": "stylelint 'site/sass/**/*.scss'",
-    "css:fix": "stylelint --fix 'site/sass/**/*.scss'"
+    "vrt": "node vrt.js test"
   },
   "nyc": {
     "include": [
@@ -171,8 +178,8 @@
     "vite.config.js": "eslint --cache",
     "ava.config.cjs": "eslint --cache",
     "site/*/!(style-guide)/**/*.md": "remark -q -f",
-    "./**/*.{html,md,js,json,scss}": "prettier -c",
-    "site/sass/**/*scss": "stylelint 'site/sass/**/*.scss'",
+    "**/*": "prettier -c",
+    "site/sass/**/*scss": "stylelint",
     "tests/**/*.js": "eslint -c tests/.eslintrc.yml --cache"
   }
 }
