--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -24,37 +24,25 @@ results:
     value: 103%
     icon: trending-up
   footnote: 1
-onAndWith:
-  desc: Build for Chrome OS, build on Chrome OS
-  cards:
-    - images:
-        - src: ix://landings/home/linux-laptop-base.png
-          alt: A Chromebook.
-        - src: ix://landings/home/android-studio.png
-          alt: Android Studio running on Chrome OS.
-        - src: ix://landings/home/terminal.png
-          alt: The Terminal app for Linux on Chrome OS.
-      content:
-        title: Bring ideas to life with Linux on Chrome OS
-        copy: Linux on Chrome OS gives you the power to use a single machine to build and run Android, Web, and Linux apps using your favorite editors, IDES, and world-class devs tools. Just set up Linux on Chrome OS to start building.
-      cta:
-        url: /en/linux
-        text: Start with Linux
-      modifiers:
-        offset: true
-    - images:
-        - src: ix://landings/home/design-resources-laptop.png
-          alt: A large-screen app on a laptop showing how specific elements, highlighted in blue, yellow, green, and red, have been adapted from a small-screen app on a phone (the following image).
-        - src: ix://landings/home/design-resources-phone.png
-          alt: A small-screen app on a phone with blue and yellow highlighted elements prior to adapting to a large-screen app (the previous image).
-      content:
-        title: Jumpstart your latest project with design resources for Chrome OS
-        copy: Find everything you need to know about designing your app for and on Chrome OS with app guidelines including information on user experience, visual design, UI components, navigation, fonts, and more.
-      cta:
-        url: /en/android/design
-        text: See design resources
-      modifiers:
-        offset: true
+linux:
+  content:
+    title: |
+      Keep Linux at your side
+      —anywhere.
+    copy: Your Linux environment is seamlessly built into Chrome OS, and with you even when WiFi isn't.
+  cta:
+    url: /en/linux
+    text: Learn more
+  images:
+    - src: https://drive.google.com/uc?id=1HS77cWV8yRK6aNW2t6FxxFWQb9k8b7nB
+      alt: A Chromebook with the Vim text editor opened.
+    - src: https://drive.google.com/uc?id=18bGh5nk3c6iOXC96VSzWYKI_Ima7ZvFo
+      alt: A Vim text editor with code.
+  shapes:
+    - type: bracket-circle
+      fill: blue-600
+    - type: semicircle
+      fill: secondary-blue-light
 posts:
   title: The latest on Chrome OS
   modifiers:
