--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,10 @@ updates:
     commit-message:
       prefix: '📌 '
     ignore:
-      - dependency-name: remark-lint*
+      - dependency-name: remark*
+        update-types:
+          - version-update:semver-major
+      - dependency-name: node-fetch
         update-types:
           - version-update:semver-major
       - dependency-name: unified-lint-rule
