Add ignores for custom and Sass functions
No way to disable this rule if enabled somewhere else (styleling-config-recommended) so needed to use ignoreFunctions option instead

Ignoring custom functions and Sass functions that are used. Whenever a new functions is created, or a new Sass function is used, this will need to be updated

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -14,6 +14,12 @@
     "property-no-vendor-prefix": true,
     "value-no-vendor-prefix": true,
     "number-leading-zero": "always",
+    "function-no-unknown": [
+      true,
+      {
+        "ignoreFunctions": ["pxRem", "pxEm", "math.div", "nth", "map-get"]
+      }
+    ],
     "function-url-quotes": "always",
     "font-weight-notation": "numeric",
     "font-family-name-quotes": "always-where-required",
