--- a/functions/package.json
+++ b/functions/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "firebase-functions": "^3.18.1",
+    "firebase-admin": "^10.0.2",
     "iso-639-1": "^2.1.13",
     "lunr": "^2.3.8"
   },
@@ -13,7 +14,5 @@
   "volta": {
     "node": "14.18.2"
   },
-  "devDependencies": {
-    "firebase-admin": "^10.0.2"
-  }
+  "devDependencies": {}
 }
