--- a/site/en/_data/nav.yml
+++ b/site/en/_data/nav.yml
@@ -1,4 +1,4 @@
-- title: Apps & Games
+- title: Adapt
   desc: Discover resources to start building your Android apps, web apps, and games for Chrome OS.
   icon: game-controller
   sections:
@@ -8,14 +8,10 @@
       url: web
     - title: Games
       url: games
-- title: Publish
-  desc: Learn about publishing your apps on the Google Play Store and engage millions of users on Chromebooks.
-  url: publish
-  icon: publish
-  alt: publish
 - title: Develop
   desc: Use Chrome OS to develop apps in a fast, secure, and hassle-free environment.
-  icon: wrench
+  icon: publish
+  alt: publish
   sections:
     - title: Linux
       url: linux
@@ -25,6 +21,10 @@
       url: web-environment
     - title: Productivity
       url: productivity
+- title: Publish
+  desc: Learn about publishing your apps on the Google Play Store and engage millions of users on Chromebooks.
+  icon: wrench
+  url: publish
 - title: News & Stories
   url: news
   alt: stories
