--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -66,7 +66,7 @@ subnav:
   content:
     title: Helpful resources at every stage.
   modifiers:
-    subtitle: Unlock your app’s potential with our extensive library of tools and resources.
+    subtitle: Unlock your app's potential with our extensive library of tools and resources.
     variant: subnav
 chromebook:
   image:
