--- a/site/en/_data/nav.yml
+++ b/site/en/_data/nav.yml
@@ -8,6 +8,8 @@
       url: web
     - title: Games
       url: games
+    - title: Building for Education
+      url: education
 - title: Publish
   desc: Learn about publishing your apps on the Google Play Store and engage millions of users on Chromebooks.
   url: publish
