--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -31,13 +31,12 @@ linux:
       —anywhere.
     copy: Your Linux environment is seamlessly built into Chrome OS, and with you even when WiFi isn't.
   cta:
-    url: /en/linux
     text: Learn more
+    url: /en/linux
   images:
-  # TODO: Update to imgix sources
-    - src: https://drive.google.com/uc?id=1HS77cWV8yRK6aNW2t6FxxFWQb9k8b7nB
+    - src: ix://devices/Chromebook_numpad.png
       alt: Opened Chromebook with a birds eye view of a beach set as its background.
-    - src: https://drive.google.com/uc?id=18bGh5nk3c6iOXC96VSzWYKI_Ima7ZvFo
+    - src: ix://lifestyle/vim_window.jpg
       alt: A Vim text editor with code.
 posts:
   title: The latest on Chrome OS
