PR updates, align with canonical item grid

--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -62,7 +62,7 @@ posts:
     subtitle: Explore trends, events, and updates on our community.
     cta:
       text: All Articles
-      url: /en/news
+      url: news
 featured:
   modifiers:
     custom: landing--news-grey-overlay
