--- a/site/en/_data/nav.yml
+++ b/site/en/_data/nav.yml
@@ -1,6 +1,8 @@
-- title: Apps & Games
+- title: Adapt
   desc: Discover resources to start building your Android apps, web apps, and games for Chrome OS.
-  icon: game-controller
+  icon:
+    name: multi-device
+    background: blue
   sections:
     - title: Adapting Android
       url: android
@@ -8,14 +10,12 @@
       url: web
     - title: Games
       url: games
-- title: Publish
-  desc: Learn about publishing your apps on the Google Play Store and engage millions of users on Chromebooks.
-  url: publish
-  icon: publish
-  alt: publish
 - title: Develop
   desc: Use Chrome OS to develop apps in a fast, secure, and hassle-free environment.
-  icon: wrench
+  icon:
+    name: bracket-monitor
+    background: yellow
+  alt: publish
   sections:
     - title: Linux
       url: linux
@@ -25,6 +25,12 @@
       url: web-environment
     - title: Productivity
       url: productivity
+- title: Publish
+  desc: Learn about publishing your apps on the Google Play Store and engage millions of users on Chromebooks.
+  icon:
+    name: upload
+    background: green
+  url: publish
 - title: News & Stories
   url: news
   alt: stories
