--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -77,7 +77,11 @@ onAndWith:
 posts:
   title: The latest on Chrome OS
   modifiers:
-    shapeOn: 1
+    custom: item-grid--posts
+    subtitle: Explore trends, events, and updates on our community.
+    cta:
+      text: All Articles
+      url: news
 featured:
   modifiers:
     custom: landing--news-grey-overlay
