--- a/site/en/_data/home.yml
+++ b/site/en/_data/home.yml
@@ -32,7 +32,7 @@ linux:
     copy: Your Linux environment is seamlessly built into Chrome OS, and with you even when WiFi isn't.
   cta:
     text: Learn more
-    url: /en/linux
+    url: linux
   images:
     - src: ix://devices/Chromebook_numpad.png
       alt: Opened Chromebook with a birds eye view of a beach set as its background.
