--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
   },
   "dependencies": {
     "comlink": "^4.3",
+    "container-query-polyfill": "^0.1.2",
     "css-paint-polyfill": "^3.0",
     "dynamic-import-polyfill": "^0.1",
     "i18n-iso-countries": "^7.3",
